--- a/client/public/index.html
+++ b/client/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Lokana</title>
+    <!-- fix a problem with url parameters on production level -->
+    <base href="/" />
     <!-- Leaflet CSS -->
     <link
       rel="stylesheet"
